fixes config error for powerstrip

--- a/config/dnsmasq.conf
+++ b/config/dnsmasq.conf
@@ -245,7 +245,14 @@ dhcp-range=192.168.3.100,192.168.3.200,255.255.255.0,48h
 
 # Give the machine which says its name is "bert" IP address
 # 192.168.0.70 and an infinite lease
+#dhcp-host=braupi,192.168.3.100,infinite
+
+# braubar config
+# braupi
 dhcp-host=braupi,192.168.3.100,infinite
+# powerstrip
+dhcp-host=88:b6:27:01:1a:e4,192.168.3.101,infinite
+
 
 # Always give the host with client identifier 01:02:02:04
 # the IP address 192.168.0.60
