--- a/install/braubar.conf
+++ b/install/braubar.conf
@@ -21,4 +21,4 @@ stderr_logfile_backups=10
 stderr_capture_maxbytes=1MB
 stderr_events_enabled=false
 serverurl=AUTO
-
+environment=PYTHONPATH="/home/pi/braubar-pi-master/braubar/service"
