--- a/config/prod_config.json
+++ b/config/prod_config.json
@@ -10,11 +10,7 @@
   "sensors": [
     {
       "name": "maische",
-      "uri": "../test/devices/28-1/w1_slave.txt"
-    },
-    {
-      "name": "leuterwasser",
-      "uri":  "../test/devices/28-2/w1_slave.txt"
+      "uri": "sys/bus/w1/devices/28-000005e2fdc3/w1_slave"
     }
   ]
 }
